k8s/base/fraud-model-predictor-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: seldon-gateway
  namespace: seldon-system
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - fraud-detection.local

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: seldon-vs
  namespace: seldon-system
spec:
  hosts:
  - fraud-detection.local
  gateways:
  - seldon-gateway
  http:
  - route:
    - destination:
        host: fraud-ab-test-experiment
        port:
          number: 9000
